dateset/hwameistor-main/helm/hwameistor/failover-assistant.yaml
# Source: hwameistor/templates/failover-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-failover-assistant
  namespace: dynamic_parameters
  labels:
    app: hwameistor-failover-assistant
spec:
  replicas: dynamic_parameters
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hwameistor-failover-assistant
  template:
    metadata:
      labels:
        app: hwameistor-failover-assistant
    spec:
      serviceAccountName: hwameistor-admin
      containers:
        - name: failover-assistant
          image: dynamic_parameters/dynamic_parameters:dynamic_parameters
          imagePullPolicy: IfNotPresent
          resources:
