dateset/hwameistor-main/helm/hwameistor/hwameistor_templates_local-storage-csi-controller_20.yaml
# Source: hwameistor/templates/local-storage-csi-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-local-storage-csi-controller 
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwameistor-local-storage-csi-controller
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hwameistor-local-storage-csi-controller
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hwameistor-local-storage
            topologyKey: topology.lvm.hwameistor.io/node
      containers:
      - args:
        - --v=5
        - --csi-address=$(CSI_ADDRESS)
        - --leader-election=true
        - --feature-gates=Topology=true
        - --strict-topology
        - --extra-create-metadata=true
        image: registry.k8s.io/sig-storage/csi-provisioner:v3.5.0
        imagePullPolicy: IfNotPresent
        name: provisioner
        resources:
            {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --csi-address=$(CSI_ADDRESS)
        - --leader-election=true
        - --timeout=120s
        image: registry.k8s.io/sig-storage/csi-attacher:v3.0.1
        imagePullPolicy: IfNotPresent
        name: attacher
        resources:
            {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
          - "--v=5"
          - "--csi-address=$(CSI_ADDRESS)"
          - "--leader-election"
          - "--http-endpoint=:8080"
        image: registry.k8s.io/sig-storage/csi-external-health-monitor-controller:v0.8.0
        imagePullPolicy: IfNotPresent
        name: monitor
        volumeMounts:
          - name: socket-dir
            mountPath: /csi
        ports:
          - containerPort: 8080
            name: http-endpoint
            protocol: TCP
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz/leader-election
            port: http-endpoint
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 20
      - args:
        - --v=5
        - --csi-address=$(CSI_ADDRESS)
        - --leader-election=true
        image: registry.k8s.io/sig-storage/csi-resizer:v1.0.1
        imagePullPolicy: IfNotPresent
        name: resizer
        resources:
            {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --leader-election=true
        name: snapshot-controller
        image: registry.k8s.io/sig-storage/snapshot-controller:v6.0.0
        imagePullPolicy: IfNotPresent
        resources:
            {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - args:
          - --v=5
          - --leader-election=true
          - --csi-address=$(CSI_ADDRESS)
          - --leader-election
        volumeMounts:
          - mountPath: /csi
            name: socket-dir
        name: csi-snapshotter
        image: registry.k8s.io/sig-storage/csi-snapshotter:v6.0.0
        imagePullPolicy: IfNotPresent
        resources:
            {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      priorityClassName: 
      restartPolicy: Always
      serviceAccountName: hwameistor-admin 
      serviceAccount: hwameistor-admin
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/not-ready
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - effect: NoSchedule
        key: node.cloudprovider.kubernetes.io/uninitialized
        operator: Exists
      volumes:
      - hostPath:
          path: /var/lib/kubelet/plugins/lvm.hwameistor.io
          type: DirectoryOrCreate
        name: socket-dir
