dateset/hwameistor-main/helm/hwameistor/local-disk-action-controller.yaml
# Source: hwameistor/templates/local-disk-action-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-local-disk-action-controller
  namespace: dynamic_parameters
  labels:
    app: hwameistor-local-disk-action-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hwameistor-local-disk-action-controller
  template:
    metadata:
      labels:
        app: hwameistor-local-disk-action-controller
    spec:
      serviceAccountName: hwameistor-admin
      containers:
        - name: lda-controller
          image: dynamic_parameters/dynamic_parameters:dynamic_parameters
          imagePullPolicy: IfNotPresent
          resources:
