dateset/hwameistor-main/helm/hwameistor/local-storage.yaml
# Source: hwameistor/templates/local-storage.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hwameistor-local-storage 
  namespace: default
spec:
  selector:
    matchLabels:
      app: hwameistor-local-storage 
  template:
    metadata:
      labels:
        app: hwameistor-local-storage 
      annotations:
        kubectl.kubernetes.io/default-container: member
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: lvm.hwameistor.io/enable
                operator: NotIn
                values:
                  - "false"

      containers:
      - args:
        - --v=5
        - --csi-address=/csi/csi.sock
        - --kubelet-registration-path=/var/lib/kubelet/plugins/lvm.hwameistor.io/csi.sock
        image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.5.0
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - rm -rf /registration/lvm.hwameistor.io /registration/lvm.hwameistor.io-reg.sock
        name: registrar
        resources:
            {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
        - mountPath: /registration
          name: registration-dir
      - args:
        - --nodename=$(MY_NODENAME)
        - --namespace=$(POD_NAMESPACE)
        - --csi-address=$(CSI_ENDPOINT)
        - --http-port=80
        - --v=5
        - --drbd-start-port=43001
        - --max-ha-volume-count=1000
        image: ghcr.io/hwameistor/local-storage:v0.14.1
        imagePullPolicy: IfNotPresent
        name: member
        ports:
        - containerPort: 80
          name: healthz
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: healthz
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 3
        resources:
            {}
        securityContext:
          #  allowPrivilegeEscalation: true
          capabilities:
            add:
            - SYS_ADMIN
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/kubelet/plugins
          mountPropagation: Bidirectional
          name: plugin-dir
        - mountPath: /var/lib/kubelet/plugins_registry
          name: registration-dir
        - mountPath: /var/lib/kubelet/pods
          mountPropagation: Bidirectional
          name: pods-mount-dir
        - mountPath: /dev
          name: host-dev
        - mountPath: /etc/drbd.d
          mountPropagation: Bidirectional
          name: host-etc-drbd
        - mountPath: /root/.ssh
          mountPropagation: Bidirectional
          name: ssh-dir
        - mountPath: /mnt
          name: host-mnt
          mountPropagation: "Bidirectional"
      dnsPolicy: ClusterFirstWithHostNet
      hostPID: true
      priorityClassName: 
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: hwameistor-admin 
      serviceAccount: hwameistor-admin
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/not-ready
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - effect: NoSchedule
        key: node.cloudprovider.kubernetes.io/uninitialized
        operator: Exists
      volumes:
      - hostPath:
          path: /var/lib/kubelet/plugins/lvm.hwameistor.io
          type: DirectoryOrCreate
        name: socket-dir
      - hostPath:
          path: /var/lib/kubelet/plugins
          type: DirectoryOrCreate
        name: plugin-dir
      - hostPath:
          path: /var/lib/kubelet/plugins_registry/
          type: Directory
        name: registration-dir
      - hostPath:
          path: /dev
          type: ""
        name: host-dev
      - hostPath:
          path: /etc/drbd.d
          type: DirectoryOrCreate
        name: host-etc-drbd
      - hostPath:
          path: /var/lib/kubelet/pods
          type: DirectoryOrCreate
        name: pods-mount-dir
      - hostPath:
          path: /root/.ssh
          type: DirectoryOrCreate
        name: ssh-dir
      - hostPath:
          path: /mnt
          type: DirectoryOrCreate
        name: host-mnt
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
