dateset/hwameistor-main/helm/hwameistor/exporter.yaml
# Source: hwameistor/templates/exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwameistor-exporter
  namespace: dynamic_parameters
  labels:
    app: hwameistor-exporter
spec:
  selector:
    app: hwameistor-exporter
  ports:
    - port: 80
      targetPort: http-metrics
      name: http-metrics

---
# Source: hwameistor/templates/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-exporter
  namespace: dynamic_parameters
  labels:
    app: hwameistor-exporter
spec:
  replicas: dynamic_parameters
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hwameistor-exporter
  template:
    metadata:
      labels:
        app: hwameistor-exporter
    spec:
      serviceAccountName: hwameistor-admin
      containers:
        - name: exporter
          image: dynamic_parameters/dynamic_parameters:dynamic_parameters
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http-metrics
          resources:
