dateset/hwameistor-main/helm/hwameistor/hwameistor_templates_ui_9.yaml
# Source: hwameistor/templates/ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hwameistor-ui
  name: hwameistor-ui
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: hwameistor-ui
