dateset/hwameistor-main/helm/hwameistor/admission-controller.yaml
# Source: hwameistor/templates/admission-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwameistor-admission-controller
  namespace: default
spec:
  selector:
    app: hwameistor-admission-controller
  ports:
    - port: 443
      targetPort: admission-api

---
# Source: hwameistor/templates/admission-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-admission-controller
  namespace: default
  labels:
    app: hwameistor-admission-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hwameistor-admission-controller
  template:
    metadata:
      labels:
        app: hwameistor-admission-controller
    spec:
      serviceAccountName: hwameistor-admin
      containers:
        - name: server
          args:
            - --cert-dir=/etc/webhook/certs
            - --tls-private-key-file=tls.key
            - --tls-cert-file=tls.crt
          image: ghcr.io/hwameistor/admission:v0.14.1
          imagePullPolicy: IfNotPresent
          resources:
            {}
          ports:
            - containerPort: 18443
              name: admission-api
          volumeMounts:
            - name: admission-controller-tls-certs
              mountPath: /etc/webhook/certs
      volumes:
       - name: admission-controller-tls-certs
         emptyDir: {}

---
# Source: hwameistor/templates/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hwameistor-admission-mutate
