dateset/hwameistor-main/helm/hwameistor/hwameistor_templates_admission-controller_25.yaml
# Source: hwameistor/templates/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hwameistor-admission-mutate
